# natsumewatch

./: README.md
backend/: .env.example  .gitignore  pyproject.toml
backend/app/: anilibria.py  config.py  db.py  jikan.py  kodik.py  main.py  models.py  presence.py  schemas.py  security.py  shikimori.py
backend/app/routers/: anime.py  auth.py  friends.py  me.py  oauth.py  social.py  stats.py  users.py
backend/natsumewatch_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
frontend/: next.config.js  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/anime/: AnimeClient.tsx  page.tsx
frontend/src/app/anime/[idOrAlias]/: page.tsx
frontend/src/app/catalog/: CatalogClient.tsx  page.tsx
frontend/src/app/friends/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/messages/: page.tsx
frontend/src/app/profile/: page.tsx
frontend/src/app/profile/lists/: page.tsx
frontend/src/app/random/: page.tsx
frontend/src/app/register/: page.tsx
frontend/src/app/users/: page.tsx
frontend/src/components/: Avatar.tsx  Comments.tsx  DubSwitcher.tsx  EpisodeDownloads.tsx  Footer.tsx  Header.tsx  Hero.tsx  KodikPlayer.tsx  ListPicker.tsx  Logo.tsx  MobileBottomNav.tsx  OAuthButtons.tsx  OAuthRedirectHandler.tsx  OnlineBadge.tsx  Player.tsx  PosterCard.tsx  PosterRow.tsx  PresenceProvider.tsx  RatingWidget.tsx  RatingsBar.tsx  Reviews.tsx  SearchBox.tsx  StatsPie.tsx  TorrentsList.tsx  UserOnlineDot.tsx
frontend/src/lib/: api.ts  auth.ts  format.ts  posters.ts  presence.ts  types.ts
(+2 files in other folders)
